--- a/exo_divshot/divshot_style.css
+++ b/exo_divshot/divshot_style.css
@@ -1,6 +1,6 @@
 /*------------------ Page ---------------------*/
 body {
-background-color: #3f4042;
+background-color: #3f4342;
 }
 
 /*------------------ Header ---------------------*/
@@ -8,7 +8,7 @@ header {
     width: 100%;
     height: 100px;
     margin-bottom:3px;
-    background-color: #37BBD2;
+    background-color: #37bbd2;
 }
 h1 {
     display: inline-block;
@@ -50,17 +50,17 @@ p, span {
     margin: 20px 30px 0px 20px;
 }
 /*------------------ Colors ---------------------*/
-.white
-.grey
-.red
-.dark-red
-.violet
-.dark-violet
-.green
-.dark-green
-.yellow
-.dark-yellow
-.blue
-.dark-blue
+.white { background-color: #fff;}
 
-.
+.grey { background-color: #999;}
+.red { background-color: #f9897d;}
+.dark-red { background-color: #f8504d;}
+.violet { background-color: #b483ff;}
+.dark-violet { background-color: #7f56c6;}
+.green { background-color: #b7f6c9;}
+.dark-green { background-color: #34ebb3;}
+.yellow { background-color: #fbff86;}
+.dark-yellow { background-color: #fbed1a;}
+.blue { background-color: #7efeff;}
+.dark-blue { background-color: #3ea8f6;}
+
